--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="common_network">Network</string>
+  <string name="common_account_address">Account address</string>
   <string name="dapp_confirm_authorize_title_format">Allow “%s” to access your account addresses?</string>
   <string name="dapp_dapp">DApp</string>
   <string name="dapp_confirm_authorize_subtitle">Approve this request if you trust the application</string>
+  <string name="dapp_confirm_sign_extrinsic_subtitle">Approve this request if you trust the application.\nCheck the transaction details.</string>
   <string name="common_reject">Reject</string>
   <string name="common_allow">Allow</string>
 
