--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="dapp_browser_close_warning_message">Are you sure you want to close this screen?\nYour changes will not be applied.</string>
+  <string name="common_close">Close</string>
+
   <string name="dapp_search_hint">Search by name or enter URL</string>
   <string name="common_all">All</string>
   <string name="dapp_sign_extrinsic_details_subtitle">Make sure the operation is correct</string>
