--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -80,9 +80,12 @@
   <string name="choose_amount_network_error">Сеть недоступна</string>
   <string name="choose_amount_to">Кому</string>
   <string name="common_account">Аккаунт</string>
+  <string name="common_account_address">Адрес аккаунта</string>
   <string name="common_add">Добавить</string>
   <string name="common_address">Адрес</string>
   <string name="common_advanced">Продвинутый</string>
+  <string name="common_all">Все</string>
+  <string name="common_allow">Разрешить</string>
   <string name="common_amount">Сумма</string>
   <string name="common_amount_low">Сумма слишком мала</string>
   <string name="common_applied">Применено</string>
@@ -96,6 +99,7 @@
   <string name="common_chain">Сеть</string>
   <string name="common_change">Изменить</string>
   <string name="common_choose_network">Выберите сеть</string>
+  <string name="common_close">Закрыть</string>
   <string name="common_completed_with_count">Завершённые (%s)</string>
   <string name="common_confirm">Подтвердить</string>
   <string name="common_confirm_title">Подтверждение</string>
@@ -130,6 +134,7 @@
   <string name="common_learn_more_v2_2_0">Узнать больше</string>
   <string name="common_left">%s осталось</string>
   <string name="common_module">Модуль</string>
+  <string name="common_network">Сеть</string>
   <string name="common_next">Далее</string>
   <string name="common_no_screenshot_message_v2_2_0">Мы собираемся показать вашу мнемонику. Убедитесь, что никто не видит ваш экран и не делайте скриншотов - к ним могут получить доступ вредоносные программы</string>
   <string name="common_not_enough_funds_message">К сожалению, у вас недостаточно средств для оплаты сетевого сбора.</string>
@@ -137,6 +142,7 @@
   <string name="common_ok">OK</string>
   <string name="common_options_title">Выберите опцию</string>
   <string name="common_proceed">Продолжить</string>
+  <string name="common_reject">Отклонить</string>
   <string name="common_reset">Сброс</string>
   <string name="common_retry">Повторить</string>
   <string name="common_search">Поиск</string>
@@ -218,9 +224,17 @@
   <string name="crowdloan_unlock_hint">Ваши %s токены будут возвращены обратно после срока лизинга парачейна.</string>
   <string name="crowdloan_your_contributions">Ваш вклад</string>
   <string name="crownloans_raised_format" formatted="false">Собрано: %s из %s</string>
+  <string name="dapp_browser_close_warning_message">Вы уверены, что хотите закрыть этот экран?\nВсе изменения не будут применены.</string>
+  <string name="dapp_confirm_authorize_subtitle">Одобрите этот запрос, если вы доверяете приложению</string>
+  <string name="dapp_confirm_authorize_title_format">Разрешить “%s” доступ к адресам вашего кошелька?</string>
+  <string name="dapp_confirm_sign_extrinsic_subtitle">Одобрите этот запрос, если вы доверяете приложению.\nПроверьте детали транзакции.</string>
+  <string name="dapp_dapp">DApp</string>
   <string name="dapp_dapps">DApps</string>
   <string name="dapp_main_welcome_subtitle">Подключайтесь к приложениям\nэкосистемы Полькадот &amp; Кусама,\nиспользуя аккаунты из Nova Wallet</string>
   <string name="dapp_main_welcome_title">Добро пожаловать\nна портал приложений</string>
+  <string name="dapp_search_hint">Введите имя или URL</string>
+  <string name="dapp_sign_extrinsic_details_subtitle">Убедитесь, что операция правильная</string>
+  <string name="dapp_sign_extrinsic_failed">Не удалось подписать запрошенную операцию</string>
   <string name="ecdsa_selection_subtitle">(BTC/ETH совместимый)</string>
   <string name="ecdsa_selection_title">ECDSA</string>
   <string name="ed25519_selection_subtitle">ed25519 (альтернативный)</string>
