--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="wallet_filter_hide_zero_balance">Hide assets with zero balances</string>
 
   <string name="wallet_send_existential_warnining_transfer_dust">Your account will be removed from blockchain after transfer cause it makes total balance lower than minimal. Remaining balance will be transferred to recipient as well.</string>
   <string name="wallet_send_dead_recipient_commission_asset_title">Recipient is not able to accept transfer</string>
