--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="nft_collection">Collection</string>
+  <string name="nft_owned_by">Owned by</string>
+  <string name="nft_created_by">Created by</string>
+
   <string name="nft_issuance_unlimited">Unlimited series</string>
   <string name="nft_issuance_limited_format">#%s Edition of %s</string>
   <string name="nft_your_nfts">Your NFTs</string>
