--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
   <string name="wallet_transfer_details_send_back">Send to this contact</string>
 
   <string name="common_transaction_id">Transaction ID</string>
+  <string name="common_type">Type</string>
+
 
   <string name="nft_price_not_listed">Not listed</string>
   <string name="common_price">Price</string>
