--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="staking_nominated">Nominated:</string>
+  <!--  <string name="staking_your_nominated_format">Nominated:</string>-->
+
   <string name="staking_change_controller">Change controller</string>
   <string name="staking_controller">Controller</string>
   <string name="staking_stash">Stash</string>
@@ -568,7 +571,6 @@
   <string name="staking_your_elected_format">Elected (%s)</string>
   <string name="staking_your_inactive_description">Validators who were not elected in this era.</string>
   <string name="staking_your_inactive_description_v2_2_0">Validators without enough stake to be elected</string>
-  <string name="staking_your_nominated_format">Nominated: %s</string>
   <string name="staking_your_not_allocated_description">Others, who are active without your stake allocation.</string>
   <string name="staking_your_not_allocated_description_v2_2_0">Active validators without your stake assignment</string>
   <string name="staking_your_not_elected_format">Not elected (%s)</string>
