--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="staking_start_change_validators_recommended_subtitle">Nova Wallet will select the top validators based on security and profitability criteria</string>
+<!--  <string name="staking_start_change_validators_recommended_subtitle">Nova algorithm selected a list of recommended validators based on the criteria:</string>-->
+<!--  <string name="staking_start_change_validators_recommended_subtitle_v2_2_0">Nova Wallet created a list of recommended validators based on blockchain data and with the following criteria:</string>-->
+
   <string name="staking_nominations_rewarded_format" formatted="false">%s rewarded</string>
 
   <string name="common_status">Status</string>
@@ -526,8 +530,7 @@
   <string name="staking_start_change_validators_custom_subtitle">You should trust your nominations to act competently and honest, basing your decision purely on their current profitability could lead to reduced profits or even loss of funds.</string>
   <string name="staking_start_change_validators_custom_subtitle_v2_2_0">Choose your validators carefully, as they should act proficiently and honest. Basing your decision purely on the profitability could lead to reduced rewards or even loss of stake</string>
   <string name="staking_start_change_validators_custom_title">Stake with your validators</string>
-  <string name="staking_start_change_validators_recommended_subtitle">Nova algorithm selected a list of recommended validators based on the criteria:</string>
-  <string name="staking_start_change_validators_recommended_subtitle_v2_2_0">Nova Wallet created a list of recommended validators based on blockchain data and with the following criteria:</string>
+
   <string name="staking_start_change_validators_recommended_title">Stake with recommended validators</string>
   <string name="staking_start_title">Start staking</string>
   <string name="staking_stash_can_hint">Stash can bond more and set the controller.</string>
