Change ru translation for single payout

--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -417,7 +417,7 @@
   <string name="staking_nominator_status_inactive">Неактивен</string>
   <string name="staking_nominator_status_waiting">Ожидание следующей Эры</string>
   <string name="staking_nominator_status_waiting_format">ожидание следующей эры (%s)</string>
-  <string name="staking_payout">Выплаты</string>
+  <string name="staking_payout">Выплата</string>
   <string name="staking_payout_expired">Срок выплаты истёк</string>
   <plurals name="staking_payouts_days_left">
     <item quantity="one">%d день</item>
