--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -417,7 +417,7 @@
   <string name="staking_nominator_status_inactive">Неактивен</string>
   <string name="staking_nominator_status_waiting">Ожидание следующей Эры</string>
   <string name="staking_nominator_status_waiting_format">ожидание следующей эры (%s)</string>
-  <string name="staking_payout">Выплаты</string>
+  <string name="staking_payout">Выплата</string>
   <string name="staking_payout_expired">Срок выплаты истёк</string>
   <plurals name="staking_payouts_days_left">
     <item quantity="one">%d день</item>
@@ -543,7 +543,7 @@
   <string name="staking_your_stake">Ваш стейк</string>
   <string name="staking_your_validators">Ваши валидаторы</string>
   <string name="staking_your_validators_changing_title">Ваши валидаторы поменяются в следующую эру</string>
-  <string name="staking_zero_bond_error">Сумма должна быть больше нуля</string>
+  <string name="common_zero_amount_error">Сумма должна быть больше нуля</string>
   <string name="tabbar_staking_title">Стейкинг</string>
   <string name="tabbar_wallet_title">Кошелёк</string>
   <string name="today">Сегодня</string>
