--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="dapp_favourites_remove_title">Are you sure you want to remove this DApp from favorites?</string>
+  <string name="common_remove">Remove</string>
+  <string name="dapp_favourites">Favourites</string>
+
   <string name="common_zero_amount_error">Amount must be positive</string>
 
   <string name="dapp_phishing_title">Phishing detected</string>
