--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="common_title">Title</string>
+
+  <string name="common_save">Save</string>
+  <string name="dapp_favourites_add">Add to favorites</string>
+
   <string name="dapp_favourites_remove_title">Are you sure you want to remove this DApp from favorites?</string>
   <string name="common_remove">Remove</string>
   <string name="dapp_favourites">Favourites</string>
