--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
   <string name="common_save">Save</string>
   <string name="dapp_favourites_add">Add to favorites</string>
 
-  <string name="dapp_favourites_remove_title">Are you sure you want to remove this DApp from favorites?</string>
+  <string name="dapp_favourites_remove_title">Remove from Favorites?</string>
+  <string name="dapp_favourites_remove_description">“%s” DApp will be removed from Favorites</string>
+
   <string name="common_remove">Remove</string>
   <string name="dapp_favourites">Favourites</string>
 
