Dapp/add to favourites (#244)
* Add to favourites screen

* Code style

* Improve add to favourites information autofill

* Code style

* Update remove confirmation dialog

* Fix strings

* Do not allow multiline title and subtitle in item_dapp.xml

* Code style

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-  <string name="dapp_favourites_remove_title">Are you sure you want to remove this DApp from favorites?</string>
+  <string name="common_title">Title</string>
+
+  <string name="common_save">Save</string>
+  <string name="dapp_favourites_add">Add to favorites</string>
+
+  <string name="dapp_favourites_remove_title">Remove from Favorites?</string>
+  <string name="dapp_favourites_remove_description">“%s” DApp will be removed from Favorites</string>
+
   <string name="common_remove">Remove</string>
-  <string name="dapp_favourites">Favourites</string>
+  <string name="dapp_favourites">Favorites</string>
 
   <string name="common_zero_amount_error">Amount must be positive</string>
 
